--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ allprojects { //나의 자녀 모듈들은 다 나를 따르라는 의미이다
     }
 }
 
-//bootJar,jar 생성 x
+//메인은 bootJar,jar 생성 x
 // 스프링 부트를 사용하게 되면 부트 jar라는 파일로 만들어진다 그 파일이 더 이상 생성되지 않도록 작성
 // 왜냐하면 부모 코드는 소스 코드를 가지고 있지 않기 때문에 빌드를 해도 jar파일이 떨어지지 않기 때문이다
 bootJar {
