--- a/api/build.gradle
+++ b/api/build.gradle
@@ -39,10 +39,14 @@ test {
 }
 
 
+// 스프링부트 프로젝트는 bootJar 태스크로 실행 가능한 JAR 파일을 생성한다.
+// API 모듈에서는 이 bootJar만 필요하다. (스프링부트를 실행시켜야 하기 때문에)
 bootJar {
     enabled = true
 }
 
+// 외부(라이브러리)에서 참조할 일반 JAR 파일(jar 태스크로 생성되는 파일)은 필요 없다.
+// 따라서 API 모듈에서는 jar 태스크를 비활성화하여 불필요한 파일 생성을 방지한다.
 jar {
     enabled = false
 }
