--- a/api/build.gradle
+++ b/api/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     //실질적으로 japRepository는 api모듈에서는 모르기 때문에 라이브러리를 추가해줘야 한다
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    // jwt
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
     implementation project(':db') // db 모듈을 가져다 쓴다는 의미이다
 
 }
