--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -12,3 +12,11 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${name}
     password: ${pw}
+
+token:
+  secret:
+    key: SpringBootJWTHelperTokenSecretKeyValue123!@#
+  access-token:
+    plus-hour: 1
+  refresh-token:
+    plus-hour: 12
