--- a/store-admin/build.gradle
+++ b/store-admin/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
+    implementation("org.thymeleaf.extras:thymeleaf-extras-springsecurity6")
+    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+
 }
 
 test {
