--- a/store-admin/build.gradle
+++ b/store-admin/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -43,6 +44,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     implementation project(':db') // db 모듈을 가져다 쓴다는 의미이다
+    implementation project(':common') // common 모듈을 가져다 쓴다는 의미이다
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
