--- a/store-admin/src/main/resources/application.yml
+++ b/store-admin/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
   application:
     name: store-admin
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: ${user}
+    password: ${pass}
+
   jpa:
     show-sql: true
     properties:
